--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,18 @@ form {
     text-align: center;
 }
 
+p {
+    margin: 10pt;
+}
+
 .posts {
+    border-radius: 5px;
+    margin: 15pt;
+    border: solid 1pt lightgray;
     padding: 2pt;
+}
+
+.edit-del-btns {
+    text-align: right;
+    margin: 5pt;
 }
