--- a/src/style.css
+++ b/src/style.css
@@ -17,3 +17,23 @@ p {
     text-align: right;
     margin: 5pt;
 }
+
+h1 {
+    text-align: center;
+    margin-top: 40px;
+}
+
+nav {
+    top: 0;
+    width: 100%;
+}
+
+ul {
+    margin:5px auto;
+    /* text-align: center */
+ }
+
+li {
+    display:inline;
+}
+    
