--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
+html, body {height: 100%;}
+
+#root {
+    min-height: 100%;
+    position: relative;
+    padding-bottom: 30px;
+}
+
 form {
     text-align: center;
 }
@@ -49,4 +57,27 @@ li {
     
 #logout-btn {
     margin-left: 85%;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:link{
+    color: black;
+}
+
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color: aquamarine;
+}
+
+.footer {
+    font-size: 12px;
+    text-align: center;
+    width: 100%;
+    padding-bottom: 20px;
 }
